--- a/app/src/main/res/layout/fragment_favorites.xml
+++ b/app/src/main/res/layout/fragment_favorites.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/lightGray"
-    tools:context=".FavoritesFragment">
+    tools:context=".ui.fragments.favorites.FavoritesFragment">
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
