--- a/app/src/main/res/layout/recipes_row_layout.xml
+++ b/app/src/main/res/layout/recipes_row_layout.xml
@@ -13,6 +13,7 @@
         android:id="@+id/recipesRowLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        onRecipeClickListener="@{result}"
         android:layout_marginHorizontal="4dp"
         android:layout_marginVertical="4dp">
 
